--- a/deployment/elk_pod.yaml
+++ b/deployment/elk_pod.yaml
@@ -178,7 +178,7 @@ spec:
         fieldRef:
           fieldPath: metadata.namespace
   - name: mysql
-    image: mysql:5.7
+    image: docker.io/migs/mysql-5.7
     imagePullPolicy: IfNotPresent
     env:
       - name: MYSQL_ROOT_PASSWORD
